# advent-of-code

./: .gitignore
2023/python/: README.md  pyproject.toml
2023/python/resources/day_03/: step_2_instructions.md
2023/python/resources/day_04/: step_1_instructions.md  step_2_instructions.md
2023/python/resources/day_05/: step_1_instructions.md
2023/python/src/advent_of_code_2023/: cli.py  resources.py
2023/python/src/advent_of_code_2023/day_01/: day_01_2.py  step_1.py  step_2.py
2023/python/src/advent_of_code_2023/day_01/step_2/: __init__.py  constants.py  solve_index.py  solve_slice.py
2023/python/src/advent_of_code_2023/day_02/: step_1.py  step_2.py
2023/python/src/advent_of_code_2023/day_03/: step_1.py  step_2.py
2023/python/src/advent_of_code_2023/day_04/: step_1.py  step_2.py
